--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,14 +3,16 @@
     <string name="action_main">Main</string>
     <string name="title_activity_settings">Settings</string>
     <string name="action_settings">Settings</string>
-    <string name="action_database">Database</string>
-    <string name="title_activity_database">Database</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <!--permission-->
+    <string name="permission_camera_granted">Camera permission granted</string>
+    <string name="permission_camera_denied">Camera permission denied</string>
+    <string name="permission_storage_granted">Storage permission granted</string>
+    <string name="permission_storage_denied">Storage permission denied</string>
+
+    <!--warning-->
+    <string name="warning_all_fields">Warning! All fields must be filled</string>
+
+    <!--error-->
+    <string name="error_fail_response">Fail to get response = %1$s</string>
 </resources>
