* dropdown list (spinner) gets people dynamically from SettingsActivity.java input * strings.xml extended

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
 
     <!--error-->
     <string name="error_fail_response">Fail to get response = %1$s</string>
+
+    <!--general strings-->
+    <string name="general_placeholder">Placeholder</string>
 </resources>
