--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
 
     <!--general strings-->
     <string name="general_placeholder">Placeholder</string>
+
+    <!-- TAG -->
+    <string name="log_message">VolleyError = %1$s</string>
 </resources>
