--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,12 @@
     <!--actions-->
     <string name="action_main">Main</string>
     <string name="action_settings">Settings</string>
-    <string name="action_barChartAllMonths">Chart</string>
+    <string name="action_barChart">Chart</string>
 
     <!-- general -->
     <string name="app_name">BalanceSheet</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="title_barchartallmonths">BarChart</string>
+    <string name="title_barchart">BarChart</string>
 
     <!--permission-->
     <string name="permission_camera_granted">Camera permission granted</string>
