--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,9 @@
     <string name="general_placeholder">Placeholder</string>
     <string name="zero">0</string>
 
+    <!--button strings-->
+    <string name="button_return">Return</string>
+
     <!-- TAG -->
     <string name="log_message">VolleyError = %1$s</string>
     <string name="log_json_message">JSONObject = %1$s</string>
