* BalanceSheetWidget.kt: Implement GlanceAppWidget with 2x2 summary grid (income/spending/savings/food) and scrollable list of last 10 entries * BalanceSheetWidgetReceiver.kt: Add GlanceAppWidgetReceiver that schedules periodic refresh via WorkManager * WidgetRefreshWorker.kt: Add CoroutineWorker to refresh all widget instances every 15 minutes * balance_sheet_widget_info.xml: Define widget metadata (4x3 cells, resizable, 30min update period) * widget_loading.xml: Add initial loading layout shown before Glance renders * AndroidManifest.xml: Register widget receiver with APPWIDGET_UPDATE intent filter * strings.xml: Add widget name and description strings * MainViewModel.kt: Trigger widget update after successful data refresh * build.gradle: Add Glance 1.1.1 and WorkManager 2.10.0 dependencies for home screen widget; bumped to version: 3.05

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,8 @@
     <string name="textViewDefaultPosition">Position</string>
     <string name="textViewDefaultLocation">Location</string>
     <string name="textViewDefaultCurrency">Default Currency</string>
+
+    <!-- widget -->
+    <string name="widget_name">BalanceSheet Overview</string>
+    <string name="widget_description">Shows income, spending, savings, food budget and recent entries</string>
 </resources>
